# eva.ai

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/agent/: .env.example  .gitignore  agent.py  ai.py  main.py  package.json  pyproject.toml
apps/agent/ai/: __init__.py  ai.py  prompt.py  tools.py
apps/api/: .env.example  package.json  tsconfig.tsbuildinfo
apps/api/src/: app.ts  server.ts
apps/api/src/controllers/: token.ts
apps/eva-be/src/: app.ts
apps/eva-fe/: package.json
apps/eva-fe/src/: App.tsx  main.tsx
apps/web/: .env.example  .eslintrc.cjs  .prettierrc.cjs  index.html  package.json
apps/web/src/: App.tsx  index.css  main.tsx
apps/web/src/apps/agents/: agents.type.ts  index.tsx
apps/web/src/apps/agents/(create)/: index.tsx
apps/web/src/apps/agents/(create)/components/: agent-form.tsx
apps/web/src/apps/agents/components/: agent-table.tsx  skeleton.tsx
apps/web/src/apps/agents/components/table/: columns.tsx  data.ts  index.tsx
apps/web/src/apps/playground/: index.tsx
apps/web/src/components/layout/: page-container.tsx
apps/web/src/components/layout/sidebar/: app-sidebar.tsx  layout.tsx
apps/web/src/components/layout/sidebar/components/: nav-main.tsx  nav-projects.tsx  nav-user.tsx  team-switcher.tsx
apps/web/src/components/ui/: avatar.tsx  button.tsx  collapsible.tsx  dropdown-menu.tsx  separator.tsx  sheet.tsx  sidebar.tsx  tooltip.tsx
apps/web/src/config/: routes.tsx
docs/: whatsapp-integration.md
