[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-google-genai>=4.1.2",
    "livekit-agents[silero,turn-detector]~=1.3",
    "livekit-plugins-deepgram>=0.9",
    "livekit-plugins-google>=0.9",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.2.1",
]
